// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DelegateListItem should emit action on select button 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="border-b border-theme-neutral-200"
      >
        <td
          class="py-5"
        >
          <div
            class="Avatar__AvatarStyled-sc-1vsy2s2-0 gJAVMD"
            data-testid="Avatar"
          >
            <img
              src="data:image/svg+xml;utf8,conic-gradient(from 514.7985492727872deg at 33.284991247330005% 71.51723438303252%, #FBD38D, calc(0 * 100% / 5), transparent 0),conic-gradient(from 43.220314804736745deg at 73.19567903600186% 33.764454410465284%, #742A2A, calc(1 * 100% / 5), transparent 0),conic-gradient(from 268.2997189190799deg at 78.72665838557288% 38.86740463698292%, #F56565, calc(2 * 100% / 5), transparent 0),conic-gradient(from 59.62403380661902deg at 24.22095837116841% 16.437107647039266%, #4C51BF, calc(3 * 100% / 5), transparent 0),conic-gradient(from 498.4077646611028deg at 10.770363613957516% 38.662070864657224%, #7F9CF5, calc(4 * 100% / 5), transparent 0)"
              title="ASuusXSW9kfWnicScSgUTjttP6T9GQ3kqT"
            />
          </div>
        </td>
        <td
          class="py-5 font-bold"
        >
          Delegate 1
        </td>
        <td
          class="py-5 font-bold text-theme-neutral-dark"
        >
          #1
        </td>
        <td
          class="py-5 font-bold text-theme-neutral-dark"
        >
          3.43%
        </td>
        <td
          class="py-5"
        >
          <div
            class="flex justify-center h-full"
          >
            <a
              href="https://marketsquare.ark.io"
              rel="noreferrer"
              target="_blank"
            >
              <div
                class="sc-AxirZ iQaTP text-xl text-theme-primary"
                height="1em"
                width="1em"
              >
                <svg>
                  msq.svg
                </svg>
              </div>
            </a>
          </div>
        </td>
        <td
          class="py-5 font-bold text-theme-neutral-dark"
        >
          <span>
            80%
          </span>
        </td>
        <td
          class="py-5 font-bold text-theme-neutral-dark"
        >
          <span>
            Daily
          </span>
        </td>
        <td
          class="py-5 font-bold text-theme-neutral-dark"
        >
          <span>
            500 Ѧ
          </span>
        </td>
        <td
          class="py-5 font-bold text-theme-neutral-dark"
        >
          <span>
            2.387082496 Ѧ
          </span>
        </td>
        <td
          class="py-5"
        >
          <div
            class="text-right"
          >
            <button
              class="sc-AxjAm ddJBbC"
              color="primary"
              data-testid="DelegateListItem__button--toggle"
              type="button"
            >
              Select
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`DelegateListItem should render 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="border-b border-theme-neutral-200"
      >
        <td
          class="py-5"
        >
          <div
            class="Avatar__AvatarStyled-sc-1vsy2s2-0 gJAVMD"
            data-testid="Avatar"
          >
            <img
              src="data:image/svg+xml;utf8,conic-gradient(from 514.7985492727872deg at 33.284991247330005% 71.51723438303252%, #FBD38D, calc(0 * 100% / 5), transparent 0),conic-gradient(from 43.220314804736745deg at 73.19567903600186% 33.764454410465284%, #742A2A, calc(1 * 100% / 5), transparent 0),conic-gradient(from 268.2997189190799deg at 78.72665838557288% 38.86740463698292%, #F56565, calc(2 * 100% / 5), transparent 0),conic-gradient(from 59.62403380661902deg at 24.22095837116841% 16.437107647039266%, #4C51BF, calc(3 * 100% / 5), transparent 0),conic-gradient(from 498.4077646611028deg at 10.770363613957516% 38.662070864657224%, #7F9CF5, calc(4 * 100% / 5), transparent 0)"
              title="ASuusXSW9kfWnicScSgUTjttP6T9GQ3kqT"
            />
          </div>
        </td>
        <td
          class="py-5 font-bold"
        >
          Delegate 1
        </td>
        <td
          class="py-5 font-bold text-theme-neutral-dark"
        >
          #1
        </td>
        <td
          class="py-5 font-bold text-theme-neutral-dark"
        >
          3.43%
        </td>
        <td
          class="py-5"
        >
          <div
            class="flex justify-center h-full"
          >
            <a
              href="https://marketsquare.ark.io"
              rel="noreferrer"
              target="_blank"
            >
              <div
                class="sc-AxirZ iQaTP text-xl text-theme-primary"
                height="1em"
                width="1em"
              >
                <svg>
                  msq.svg
                </svg>
              </div>
            </a>
          </div>
        </td>
        <td
          class="py-5 font-bold text-theme-neutral-dark"
        >
          <span>
            80%
          </span>
        </td>
        <td
          class="py-5 font-bold text-theme-neutral-dark"
        >
          <span>
            Daily
          </span>
        </td>
        <td
          class="py-5 font-bold text-theme-neutral-dark"
        >
          <span>
            500 Ѧ
          </span>
        </td>
        <td
          class="py-5 font-bold text-theme-neutral-dark"
        >
          <span>
            2.387082496 Ѧ
          </span>
        </td>
        <td
          class="py-5"
        >
          <div
            class="text-right"
          >
            <button
              class="sc-AxjAm ddJBbC"
              color="primary"
              data-testid="DelegateListItem__button--toggle"
              type="button"
            >
              Select
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`DelegateListItem should render the selected delegate 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="border-b border-theme-neutral-200"
      >
        <td
          class="py-5"
        >
          <div
            class="Avatar__AvatarStyled-sc-1vsy2s2-0 gJAVMD"
            data-testid="Avatar"
          >
            <img
              src="data:image/svg+xml;utf8,conic-gradient(from 514.7985492727872deg at 33.284991247330005% 71.51723438303252%, #FBD38D, calc(0 * 100% / 5), transparent 0),conic-gradient(from 43.220314804736745deg at 73.19567903600186% 33.764454410465284%, #742A2A, calc(1 * 100% / 5), transparent 0),conic-gradient(from 268.2997189190799deg at 78.72665838557288% 38.86740463698292%, #F56565, calc(2 * 100% / 5), transparent 0),conic-gradient(from 59.62403380661902deg at 24.22095837116841% 16.437107647039266%, #4C51BF, calc(3 * 100% / 5), transparent 0),conic-gradient(from 498.4077646611028deg at 10.770363613957516% 38.662070864657224%, #7F9CF5, calc(4 * 100% / 5), transparent 0)"
              title="ASuusXSW9kfWnicScSgUTjttP6T9GQ3kqT"
            />
          </div>
        </td>
        <td
          class="py-5 font-bold"
        >
          Delegate 1
        </td>
        <td
          class="py-5 font-bold text-theme-neutral-dark"
        >
          #1
        </td>
        <td
          class="py-5 font-bold text-theme-neutral-dark"
        >
          3.43%
        </td>
        <td
          class="py-5"
        >
          <div
            class="flex justify-center h-full"
          >
            <a
              href="https://marketsquare.ark.io"
              rel="noreferrer"
              target="_blank"
            >
              <div
                class="sc-AxirZ iQaTP text-xl text-theme-primary"
                height="1em"
                width="1em"
              >
                <svg>
                  msq.svg
                </svg>
              </div>
            </a>
          </div>
        </td>
        <td
          class="py-5 font-bold text-theme-neutral-dark"
        >
          <span>
            80%
          </span>
        </td>
        <td
          class="py-5 font-bold text-theme-neutral-dark"
        >
          <span>
            Daily
          </span>
        </td>
        <td
          class="py-5 font-bold text-theme-neutral-dark"
        >
          <span>
            500 Ѧ
          </span>
        </td>
        <td
          class="py-5 font-bold text-theme-neutral-dark"
        >
          <span>
            2.387082496 Ѧ
          </span>
        </td>
        <td
          class="py-5"
        >
          <div
            class="text-right"
          >
            <button
              class="sc-AxjAm bxcsTZ"
              color="danger"
              data-testid="DelegateListItem__button--toggle"
              type="button"
            >
              Unselect
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
